apps/multimedia/transmission/05_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: multimedia
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/version: "3.4"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
        app.kubernetes.io/version: "3.4"
    spec:
      containers:
      - env:
        - name: TRANSMISSION_ADDR
          value: "http://127.0.0.1:9091"
        image: metalmatze/transmission-exporter
        name: exporter
        ports:
        - containerPort: 19091
          name: metrics
        resources:
          requests:
            memory: 11Mi
          limits:
            memory: 20Mi
      - envFrom:
        - configMapRef:
            name: transmission-config
            optional: false
        image: haugene/transmission-openvpn:3.4
        name: transmission
        ports:
        - containerPort: 9091
          name: http-api
        readinessProbe:
          tcpSocket:
            port: http-api
          initialDelaySeconds: 10
          failureThreshold: 5
          timeoutSeconds: 10
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
          - mountPath: /data
            name: data
          - mountPath: /download/incomplete
            name: incomplete
          - mountPath: /download/completed
            name: completed
          - mountPath: /config/openvpn-credentials.txt
            name: vpncreds
            subPath: openvpn-credentials.txt
        resources:
          requests:
            memory: 35Mi
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
        - 208.67.222.222
        - 208.67.220.220
      restartPolicy: Always
      volumes:
      - name: vpncreds
        secret:
          secretName: transmission-vpn-creds
      - name: data  # Allows resuming downloads after pod deletion
        persistentVolumeClaim:
          claimName: transmission-data
      - name: incomplete
        persistentVolumeClaim:
          claimName: torrents-incomplete
      - name: completed
        persistentVolumeClaim:
          claimName: torrents
      nodeSelector:
        kubernetes.io/arch: "amd64"
      tolerations: []
