apps/multimedia/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    reloader.homer/group: Multimedia
    reloader.homer/logo: https://cdn.jsdelivr.net/npm/@loganmarchione/homelab-svg-assets@latest/assets/transmission.svg
    reloader.homer/name: Transmission
    reloader.homer/subtitle: Downloader
    reloader.homer/tag: local
    traefik.http.middlewares.add-foo.addprefix.prefix: /transmission/web
  labels:
    reloader.homer/enabled: "true"
  name: downloader
spec:
  ingressClassName: private
  rules:
    - host: downloader.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: transmission
                port:
                  number: 9091
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - downloader.ankhmorpork.thaum.xyz
      secretName: downloader-ankhmorpork-thaum-xyz-tls
